# nano-graphrag

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ToDo  readme.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test-cpp.yml
docs/: README.md  benchmark-en.md
examples-cpp/: demo.cpp
include/nano_graphrag/: Embedding.hpp  GraphRAG.hpp  QueryParam.hpp  RestClient.hpp  Types.hpp
include/nano_graphrag/embedding/: factory.hpp  hash.hpp  openai.hpp
include/nano_graphrag/llm/: OpenAI.hpp  factory.hpp
include/nano_graphrag/ops/: Chunking.hpp
include/nano_graphrag/storage/: Base.hpp  GraphStorage.hpp  JsonKVStorage.hpp  NanoVectorDBStorage.hpp
include/nano_graphrag/utils/: Types.hpp
nano_cache/: full_docs.json  text_chunks.json
src/: demo.cpp  test_christmas_carol.cpp
